--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "body-parser": "^1.13.2",
     "express": "^4.13.1",
-    "node-bandwidth": "^1.1.1"
+    "node-bandwidth": "^1.1.1",
+    "request": "^2.60.0"
   }
 }
